<resources>

    <string name="app_name">Cosangue</string>
    <string name="action_settings">Configurações</string>
    <string name="title_activity_abertura">Abertura</string>

    <string name="hello_world">Hello world!</string>
    <string name="bt_entrar">Entrar</string>
    <string name="tv_cadastre_se">Cadastre-se</string>
    <string name="bt_entrar_com_facebook">Entrar com Facebook</string>
    <string name="et_usuario">E-MAIL</string>
    <string name="et_senha">SENHA</string>
    <string name="icon_user">icon_user</string>
    <string name="title_activity_cadastro">Cadastro</string>
    <string name="action_proximo">action_proximo</string>
    <string name="marca_horizontal">Marca_vertical</string>
    <string name="title_activity_pagina_inicial">PaginaInicial</string>
    <string name="logo">logo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main_page">MainPage</string>

    <string name="title_perfil">Perfil</string>
    <string name="title_hemocentro">Hemocentro</string>
    <string name="title_doacoes">Doações</string>
    <string name="title_eventos">eventos</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Entrar">Entrar</string>
    <string name="Cadastro">Ainda não tem uma conta? Cadastre-se!</string>
    <string name="Entrar_com_facebook">Entrar com Facebook</string>
    <string name="Tipografia">Tipografia da Marca</string>
    <string name="Sexo">Sexo</string>
    <string name="Mensagem">Faça parte da comunidade!</string>
    <string name="nome">Nome</string>
    <string name="login">Nome de Usuário</string>
    <string name="senha">Senha</string>
    <string name="confirmacao_senha">Repita sua senha</string>
    <string name="idade">Idade</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="title_activity_cadastro_login">CadastroLogin</string>
    <string name="tipoSanguineo">Tipo Sanguíneo</string>


<!--Titulos dos dados das ações-->
    <string name="tv_evento_categoria" formatted="false">Categoria</string>
    <string name="tv_evento_data" formatted="false">Data</string>
    <string name="tv_evento_horario" formatted="false">Horário</string>
    <string name="tv_evento_descricao" formatted="false">Descrição</string>
    <string name="tv_evento_confirmados" formatted="false">Compareceção</string>
    <string name="tv_evento_reportacoes" formatted="false">Reportações</string>
    <string name="tv_evento_nome" formatted="false">Evento</string>
    <string name="tv_evento_hemocomponentes" formatted="false">Hemocomponente Solicitado</string>
    <string name="tv_evento_tipo_sanguineo" formatted="false">Tipo Sanguíneo Solicitado</string>


    <!-- Títulos das Informações sobre Doação de Sangue   -->
    <string name="mensagem_titulo_sangue" formatted="false">O Que é Sangue?</string>
    <string name="mensagem_titulo_porquedoar" formatted="false">Por que Doar Sangue?</string>
    <string name="mensagem_titulo_requisitos" formatted="false">O que é Preciso para Doar?</string>
    <string name="mensagem_titulo_impedimentostemporarios" formatted="false">Alguns Impedimentos Temporários</string>
    <string name="mensagem_titulo_impedimentosdefinitivos" formatted="false">Alguns Impedimentos Definitivos</string>
    <string name="mensagem_titulo_fonte">Fonte</string>

    <!-- Summary das Informações sobre Doação de Sangue   -->
    <string name="mensagem_summary_sangue" formatted="false">sangue humano</string>
    <string name="mensagem_summary_porquedoar" formatted="false">Doar sangue é simples e rápido</string>
    <string name="mensagem_summary_requisitos" formatted="false">Descubra os requisitos para a doação</string>
    <string name="mensagem_summary_impedimentostemporarios" formatted="false">Saiba quais são os impedimentos temporários</string>
    <string name="mensagem_summary_impedimentosdefinitivos" formatted="false">Saiba quais são os impedimentos definitivos</string>
    <string name="mensagem_summary_fonte" formatted="false">HEMORGS</string>


    <!-- Conteúdos das Informações sobre Doação de Sangue-->
    <string name="mensagem_sangue" formatted="false">O sangue humano é composto por plasma, hemácias, leucócitos e plaquetas. É um tecido vivo que circula pelo corpo, levando oxigênio e nutrientes a todos os órgãos. Ele é classificado em grupos e subgrupos: ABO (A, B, AB e O) e os Rh (positivo e negativo). Na população brasileira, os percentuais são de aproximadamente 45% de tipo O e 42% tipo A. O grupo B representa 10% e o AB com apenas 3%. Em termos de fator RH, os tipos negativos são os mais raros. Em caso de transfusão, o ideal é que o paciente receba sangue do mesmo tipo que o seu. Em urgências, quando muitas vezes não há tempo para tipificar o sangue, é que se usa o SANGUE UNIVERSAL "O -". Isso é uma dificuldade crônica para os hemocentros e bancos de sangue, já que apenas 9% da população brasileira têm esse tipo sanguíneo. Na Região Sul, por questões de formação racial, a situação é ainda mais crítica: apenas entre 4% e 5% das pessoas são "O -".</string>
    <string name="mensagem_porquedoar" formatted="false">Muitas pessoas não sabem que doar sangue é simples, rápido e não dói. Desconhecem que todo ser humano em boas condições de saúde pode doar sangue sem qualquer risco ou prejuízo a sua saúde. Todos os dias, infelizmente, acontecem acidentes. Pessoas sofrem cirurgias de urgência. Elas aguardam que pessoas façam um gesto de solidariedade e doem sangue para reabilitar a vida. Não só os acidentados precisam de transfusões. Quem sofre queimaduras e os hemofílicos, por exemplo, também necessitam delas. Se cada cidadão saudável doasse sangue pelo menos duas vezes por ano não seriam necessárias campanhas emergenciais para coletas de reposição de estoques. O sangue não tem substituto e por isso a doação voluntária é fundamental. Uma simples doação pode salvar muitas vidas. Inclusive a sua.</string>
    <string name="mensagem_requisitos" formatted="false">Estar em boas condições de saúde. Levar documento oficial de identidade com foto. Ter idade entre 16 e 69 anos. Menores de 18 anos precisam de autorização de pais ou responsáveis legais. Pesar 50 Kg ou mais. Não estar em jejum, mas com alimentação não gordurosa. Ter dormido pelo menos 6 horas antes da doação. Não ter ingerido bebidas alcoólicas nas 12 horas anteriores à doação</string>
    <string name="mensagem_impedimentostemporarios" formatted="false">Gripe ou febre. Gravidez. 90 dias após parto normal e 180 dias após cesariana. Tatuagem ou acupuntura nos últimos 12 meses. Exposição à situação de risco para a AIDS (múltiplos parceiros sexuais, ter parceiros usuários de drogas).</string>
    <string name="mensagem_impedimentosdefinitivos" formatted="false">Doença de Chagas ou Malária. Hepatite após os 10 anos de idade. Ser portador dos vírus HIV (Aids), HCV (Hepatite C), HBC (Hepatite B), HTLV. Uso de drogas injetáveis</string>
    <string name="mensagem_fonte" formatted="false">http://www.hemocentro.rs.gov.br</string>


    <string name="title_activity_informacoes">Informacoes</string>
    <string name="tv_evento_local">Local</string>
    <string name="tv_evento_solicitacoes">Solicitações</string>
    <string name="title_activity_detalhes_eventos">DetalhesEventos</string>
    <string name="nome_evento">Nome do Evento</string>
    <string name="text_view_endereco">Endereço</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_places_auto_complete">PlacesAutoCompleteActivity</string>
    <string name="data_nascimento">Data de Nascimento</string>
    <string name="title_activity_adiciona_evento">AdicionaEvento</string>
    <string name="local_doacao">Onde doar?</string>
</resources>
