<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/primary"
    android:fitsSystemWindows="true"
    tools:context="tcc.aplicativo.Inicio">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/Tipografia"
            android:src="@drawable/tipografia_branca_logo" />

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            >

            <EditText
                android:id="@+id/et_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login"
                android:inputType="text"
                android:maxLength="20"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:drawablePadding="16dp"
                android:drawableTint="@color/accent"
                android:drawableStart="@drawable/user_icon"
                android:drawableLeft="@drawable/user_icon"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:drawablePadding="16dp"
                android:drawableTint="@color/accent"
                android:drawableTintMode="src_in"
                android:drawableStart="@drawable/password_icon"
                android:drawableLeft="@drawable/password_icon"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_entrar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/accent"
            android:padding="12dp"
            android:text="@string/Entrar"
            android:textColor="@color/primary" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_entrar_com_facebook"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/facebook"
            android:padding="12dp"
            android:text="@string/Entrar_com_facebook"
            android:textColor="@color/accent" />

        <TextView
            android:id="@+id/tv_cadastro_usuario"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/Cadastro"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>