<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="0dp"
    android:background="@color/primary"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:weightSum="1">


    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tb_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:title="Faça parte da comunidade!"
        android:titleTextColor="@color/accentColor" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/accentColor"
        android:theme="@style/Material.Widget.EditText.Light">

        <EditText
            android:id="@+id/et_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/nome"
            android:inputType="textPersonName"
            android:maxLength="50"
            android:paddingBottom="16dp"
            android:paddingTop="16dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <EditText
            android:id="@+id/et_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/login"
            android:inputType="text"
            android:maxLength="20"
            android:paddingBottom="16dp"
            android:paddingTop="16dp" />
    </android.support.design.widget.TextInputLayout>


    <TextView
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingTop="13dp"
        android:text="Tipo Sanguíneo"></TextView>

    <Spinner
        android:id="@+id/sp_tipo_sanguineo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:drawablePadding="16dp"
        android:padding="5dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <EditText
            android:id="@+id/et_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingBottom="16dp"
            android:paddingTop="16dp" />
    </android.support.design.widget.TextInputLayout>


    <RadioGroup
        android:id="@+id/rg_sexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:textAlignment="center"
        android:theme="@style/AppTheme">


        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rb_masculino"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:hint="@string/masculino"
            android:orientation="horizontal"
            android:paddingBottom="16dp"
            android:paddingTop="20dp"
            android:textSize="18dp" />


        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rb_feminino"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/feminino"
            android:orientation="horizontal"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:textAlignment="center"
            android:textSize="18dp" />

    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <EditText
            android:id="@+id/et_nascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/data_nascimento"
            android:inputType="date"
            android:maxLength="10"
            android:paddingBottom="16dp"
            android:paddingTop="16dp" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>
